# agentic-fitness-coaching

./: .env.example  .gitignore  DEMO_LOG.txt  README.md  TEST_PROMPTS.md  display.py  main.py  nodes.py  pyproject.toml  state.py  utils.py
agents/: __init__.py  orchestrator.py  specialist.py  summarizer.py
tools/: __init__.py  get_bmi.py  get_progress.py  log_intent.py  log_meal.py  log_sleep.py  log_workout.py  storage.py
