[project]
name = "fitness-coach"
version = "0.1.0"
description = "Multi-agent fitness coaching system with LangGraph"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain>=0.3.27",
    "langchain-openai>=0.2.14",
    "langgraph>=0.6.6",
    "python-dotenv>=1.1.1",
    "pytz>=2025.2",
]
